@@ -2457,10 +2457,6 @@ MagickExport Image *ScaleImage(const Image *image,const unsigned long columns,
     *y_vector,
     zero;
 
-  MagickRealType
-    alpha,
-    gamma;
-
   PointInfo
     scale,
     span;
@@ -2767,17 +2763,13 @@ MagickExport Image *ScaleImage(const Image *image,const unsigned long columns,
       t=scale_scanline;
       for (x=0; x < (long) scale_image->columns; x++)
       {
-        alpha=1.0;
-        if (image->matte != MagickFalse)
-          alpha=(MagickRealType) (QuantumScale*(QuantumRange-t->opacity));
-        gamma=1.0/(fabs((double) alpha) <= MagickEpsilon ? 1.0 : alpha);
-        q->red=RoundToQuantum(gamma*t->red);
-        q->green=RoundToQuantum(gamma*t->green);
-        q->blue=RoundToQuantum(gamma*t->blue);
+        q->red=RoundToQuantum(t->red);
+        q->green=RoundToQuantum(t->green);
+        q->blue=RoundToQuantum(t->blue);
         if (scale_image->matte != MagickFalse)
           q->opacity=RoundToQuantum(t->opacity);
         if (scale_indexes != (IndexPacket *) NULL)
-          scale_indexes[x]=(IndexPacket) RoundToQuantum(gamma*t->index);
+          scale_indexes[x]=(IndexPacket) RoundToQuantum(t->index);
         t++;
         q++;
       }
