@@ -1,3 +1,6 @@
+2009-10-18  6.5.7-1 Cristy  <quetzlzacatenango@image...>
+  * Alpha blending is not required for ScaleImage().
+
 2009-10-14  6.5.7-0 Pino Toscano  <pino@kde...>
   * ImageMagick fails to build in GNU/HURD due to absence of PATH_MAX.
 
